--- a/app/src/main/res/layout/fragment_quality.xml
+++ b/app/src/main/res/layout/fragment_quality.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".presentation.activity.AppActivity">
+    android:layout_height="match_parent">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainer"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvQuality"
+        android:gravity="center"
+        android:text="quality"
+        android:textColor="@color/black"
+        android:textSize="24sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
